Kubernetes/dev/polybot/polybot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  namespace: dev
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
